DOI Record Date Management (#130)
* Reworked the DoiSummary/DoiRecord models

Both models can now accept a node field for the PDS node, and creation_time has been moved out of DoiSummary and into DoiRecord only.
Fixes #126

* Modified the list action of the core DOI service such that start/end times are parsed as iso8601 format and update time is returned in iso8601 as well

Fixes #128

* Fixed issue in test_dois_controller.test_get_dois() where test would fail outside of the PDT timezone.

The start/end time arguments used in the test now explicitly specify the correct time zone, so the test should now always pass
Fixes #127

* manage timestamp in database as UTC
